# relaxed-spec-dec-repro

./: .gitignore  README.md  REPRODUCING.md  pyproject.toml
configs/paper/: README.md
profiles/paper/: qwen35_mtp_27b_b200_profile.json  qwen3_32b_0p6b_b200_profile.json  qwen3_32b_8b_b200_profile.json
scripts/: aggregate_results.py  apply_vllm_overlay.py  compute_proxy_speed.py  evaluate_lcb_codegen.py  prepare_data.py  regenerate_summary.py  run_offline.py  run_paper_grid.py
src/ens_spec_dec/: __init__.py  contracts.py  fsd_naming.py  offline_run.py  oom_retry.py
src/ens_spec_dec/analysis/: __init__.py  proxy_speed.py
src/ens_spec_dec/artifacts/: __init__.py  run_artifacts.py
src/ens_spec_dec/engines/: __init__.py  backend.py  vllm_offline.py
src/ens_spec_dec/evaluation/: __init__.py  lcb_codegen.py  summary.py
src/ens_spec_dec/profiling/: __init__.py  component_profiles.py
src/ens_spec_dec/tasks/: __init__.py  _code.py  _data.py  _text.py  aime_2024.py  gpqa_diamond.py  livecodebench_lite_v6.py
src/ens_spec_dec/tasks/data/: aime_2024_full.jsonl
tests/: test_aggregate_results.py  test_release_grid.py  test_release_overlay.py  test_release_runner.py  test_release_tasks.py
vllm_overlay/: README.md  apply_overlay.py
vllm_overlay/files/config/: speculative.py
vllm_overlay/files/v1/sample/: rejection_sampler.py
vllm_overlay/files/v1/spec_decode/: llm_base_proposer.py  metrics.py
vllm_overlay/files/v1/worker/: gpu_model_runner.py
